# MakkaPakka

./: .flake8  .gitignore  .pre-commit-config.yaml  Jenkinsfile  Makefile  README.md  configure.sh  elf_caver.py  mkpk.py  mkpk_compile.py  mkpk_transpile.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: azure-static-web-apps-lemon-bush-0f7dfc410.yml
docs/source/: compilation.rst  conf.py  data_structures.rst  examples.rst  index.rst  installation.rst  language_spec.rst  lib_shell.rst  lib_syscall.rst  modules.rst  public_api.rst  stdlib.rst  usage.rst
examples/: enc_etchosts.mkpk  exec_bin_sh.mkpk  make.sh  write_file.mkpk  write_text.mkpk
lib/stdlib/: execve.mkpk  network.mkpk  shell.mkpk  syscall.mkpk
makka_pakka/: __init__.py  elf_caver.py  mkpk.py  mkpk_transpile.py  settings.py
makka_pakka/directed_graph/: directed_graph.py  node.py
makka_pakka/elf_caver/: __init__.py
makka_pakka/elf_caver/caver/: code_caver.py  file_permissions.py
makka_pakka/elf_caver/exceptions/: exceptions.py
makka_pakka/elf_caver/formatting/: table_formatter.py
makka_pakka/elf_caver/injector/: binary_injector.py  byte_extraction.py  compile.py  redirect_execution.py
makka_pakka/exceptions/: exceptions.py
makka_pakka/integrating/: integrate.py
makka_pakka/linking/: linker.py  linker_path.py
makka_pakka/linking/priority_list/: priority_list.py
makka_pakka/parsing/: code.py  data.py  detect_headings.py  gadget.py  heading_structures.py  headings.py  parse.py  parse_headings.py  parsing_structures.py
makka_pakka/processing/: data_replacement.py  function_replacement.py  process.py  processing_structures.py
scripts/: inject_all_binaries.py
src/: elfcaver.py
src/makka_pakka/: elfcaver.py  mkpk.py  mkpk_transpile.py  settings.py
src/makka_pakka/directed_graph/: directed_graph.py
src/makka_pakka/exceptions/: exceptions.py
src/makka_pakka/integrating/: integrate.py
src/makka_pakka/linking/: linker.py  linker_path.py
src/makka_pakka/parsing/: parse.py  parse_headings.py  parsing_structures.py  registers.py
src/makka_pakka/processing/: data_replacement.py  (+2 more)
test/: __init__.py  test_binary_injector.py  test_code_caver.py  test_data_replacement.py  test_detect_headings.py  test_directed_graph.py  test_function_replacement.py  test_integrate.py  test_linker.py  test_linker_path.py  test_parse.py  test_parse_data.py  test_parse_functions.py  test_parse_gadgets.py  test_parse_metadata.py  test_priority_list.py  test_process.py
(+64 files in other folders)
