[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MakkaPakka"
description = "A programming language for injecting code into ELF files."
version = "1.0.4"
readme="README.md"
dependencies = [
    "lief",
    "pytest",
    "pytest-cov",
    "black",
    "pre-commit",
    "click",
    "sphinx",
    "termcolor",
]
requires-python = ">=3.10"

[project.scripts]
mkpk = "makka_pakka.mkpk:mkpk"
mkpk-transpile = "makka_pakka.mkpk_transpile:mkpk_transpile"
elf-caver = "makka_pakka.elfcaver:elfcaver"

[project.urls]
"Homepage" = "https://github.com/PandasAreBears/MakkaPakka"
"Documentation" = "https://lemon-bush-0f7dfc410.2.azurestaticapps.net/"

[tool.setuptools.packages.find]
where = ["src"]
include = ["makka_pakka*", "makka_pakka.elf_caver*"]

[tool.setuptools.package-data]
"makka_pakka.lib.stdlib" = ["*.mkpk"]
